# omnigent

./: NOTICE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: benchmark.yml  draft-release-notes.yml  finalize-release.yml  github-release.yml  homebrew-tap-pr.yml  publish-changelog.yml  release.yml
contrib/omnigent-rovo/: README.md  pyproject.toml
contrib/omnigent-rovo/docs/design/: rovo-harness-design.md
contrib/omnigent-rovo/omnigent/community/harnesses/rovo/: __init__.py  plugin.py
contrib/omnigent-rovo/omnigent/community/harnesses/rovo/inner/: __init__.py  rovo_acp.py  rovo_executor.py  rovo_harness.py
contrib/omnigent-rovo/tests/: _fake_acp_server.py  test_rovo_acp.py  test_rovo_executor.py  test_rovo_harness.py  test_rovo_live_e2e.py  test_rovo_plugin.py
deploy/openshell/: README.md
docs/: AGENT_YAML_SPEC.md
integrations/slack/: pyproject.toml
omnigent/: cli.py  harness_plugins.py  harness_startup_config.py  model_override.py
omnigent/inner/: codex_harness.py  goose_harness.py  hermes_harness.py  kimi_executor.py  kimi_harness.py  pi_harness.py  qwen_harness.py
omnigent/onboarding/: harness_readiness.py
omnigent/runner/: app.py
omnigent/runtime/: workflow.py
omnigent/server/: app.py
omnigent/spec/: _omnigent_compat.py
tests/: test_config.py  test_harness_aliases.py  test_harness_startup_config.py
tests/cli/: test_cli.py
tests/onboarding/: test_harness_readiness.py
tests/runner/: test_app_sessions_native_workflow_init.py
tests/stores/: test_conversation_store.py
web/: package-lock.json
web/electron/src/: main.js  (+1 more)
(+31 files in other folders)
